-- DROP dans l'ordre inverse de création des dépendances
DROP TABLE IF EXISTS HOSPITALISATION;
DROP TABLE IF EXISTS CONSULTATION;
DROP TABLE IF EXISTS TRAITEMENT;
DROP TABLE IF EXISTS CHAMBRE;
DROP TABLE IF EXISTS MEDICAMENT;
DROP TABLE IF EXISTS PERSONNEL;
DROP TABLE IF EXISTS PATIENT;

-- CHAMBRE
CREATE TABLE CHAMBRE (
    NO_CHAMBRE INTEGER PRIMARY KEY,
    NOM_CHAMBRE VARCHAR(20) NOT NULL,
    NO_ETAGE SMALLINT,
    NOM_BATIMENT VARCHAR(20),
    TYPE_CHAMBRE VARCHAR(10) CHECK (TYPE_CHAMBRE IN ('simple', 'double')),
    PRIX_JOUR SMALLINT NOT NULL,
    DT_CREATION DATE NOT NULL
);

-- MEDICAMENT
CREATE TABLE MEDICAMENT (
    CD_MEDICAMENT VARCHAR(10) PRIMARY KEY,
    NOM_MEDICAMENT VARCHAR(250),
    CONDIT_MEDICAMENT VARCHAR(100),
    CATG_MEDICAMENT VARCHAR(100) NOT NULL,
    MARQUE_FABRI VARCHAR(100) NOT NULL
);

-- TRAITEMENT
CREATE TABLE TRAITEMENT (
    ID_TRAITEMENT INTEGER PRIMARY KEY,
    CD_MEDICAMENT VARCHAR(10) NOT NULL,
    CATG_MEDICAMENT VARCHAR(100) NOT NULL,
    MARQUE_FABRI VARCHAR(100) NOT NULL,
    QTE_MEDICAMENT SMALLINT,
    DSC_POSOLOGIE VARCHAR(100) NOT NULL,
    ID_CONSULT INTEGER NOT NULL,
    TS_CREATION_TRAITEMENT TIMESTAMP(0) WITHOUT TIME ZONE NOT NULL,
    FOREIGN KEY (CD_MEDICAMENT) REFERENCES MEDICAMENT(CD_MEDICAMENT)
);

-- PERSONNEL
CREATE TABLE PERSONNEL (
    ID_PERSONNEL INTEGER PRIMARY KEY,
    NOM_PERSONNEL VARCHAR(100) NOT NULL,
    PRENOM_PERSONNEL VARCHAR(100) NOT NULL,
    FONCTION_PERSONNEL VARCHAR(50) NOT NULL,
    TS_DEBUT_ACTIVITE TIMESTAMP(0) WITHOUT TIME ZONE NOT NULL,
    TS_FIN_ACTIVITE TIMESTAMP(0) WITHOUT TIME ZONE,
    RAISON_FIN_ACTIVITE VARCHAR(100),
    TS_CREATION_PERSONNEL TIMESTAMP(0) WITHOUT TIME ZONE NOT NULL,
    TS_MAJ_PERSONNEL TIMESTAMP(0) WITHOUT TIME ZONE NOT NULL,
    CD_STATUT_PERSONNEL VARCHAR(10) NOT NULL
);

-- PATIENT
CREATE TABLE PATIENT (
    ID_PATIENT INTEGER PRIMARY KEY,
    NOM_PATIENT VARCHAR(100) NOT NULL,
    PRENOM_PATIENT VARCHAR(100) NOT NULL,
    DT_NAISS DATE,
    VILLE_NAISS VARCHAR(100),
    PAYS_NAISS VARCHAR(100),
    NUM_SECU VARCHAR(15),
    IND_PAYS_NUM_TELP VARCHAR(5),
    NUM_TELEPHONE VARCHAR(20),
    NUM_VOIE VARCHAR(10),
    DSC_VOIE VARCHAR(250),
    CMPL_VOIE VARCHAR(250),
    CD_POSTAL VARCHAR(10),
    VILLE VARCHAR(100),
    PAYS VARCHAR(100),
    TS_CREATION_PATIENT TIMESTAMP(0) WITHOUT TIME ZONE NOT NULL,
    TS_MAJ_PATIENT TIMESTAMP(0) WITHOUT TIME ZONE NOT NULL
);

-- CONSULTATION
CREATE TABLE CONSULTATION (
    ID_CONSULT INTEGER PRIMARY KEY,
    ID_PERSONNEL INTEGER NOT NULL,
    ID_PATIENT INTEGER NOT NULL,
    ID_TRAITEMENT INTEGER,
    TS_DEBUT_CONSULT TIMESTAMP(0) WITHOUT TIME ZONE NOT NULL,
    TS_FIN_CONSULT TIMESTAMP(0) WITHOUT TIME ZONE NOT NULL,
    POIDS_PATIENT INTEGER NOT NULL,
    TEMP_PATIENT INTEGER,
    UNIT_TEMP VARCHAR(15),
    TENSION_PATIENT INTEGER,
    DSC_PATHO VARCHAR(250),
    INDIC_DIABETE BOOLEAN,
    INDIC_HOSPI BOOLEAN,
    FOREIGN KEY (ID_PERSONNEL) REFERENCES PERSONNEL(ID_PERSONNEL),
    FOREIGN KEY (ID_PATIENT) REFERENCES PATIENT(ID_PATIENT),
    FOREIGN KEY (ID_TRAITEMENT) REFERENCES TRAITEMENT(ID_TRAITEMENT)
);

-- HOSPITALISATION
CREATE TABLE HOSPITALISATION (
    ID_HOSPI INTEGER PRIMARY KEY,
    ID_CONSULT INTEGER NOT NULL,
    NO_CHAMBRE INTEGER NOT NULL,
    ID_PERSONNEL_RESP INTEGER NOT NULL,
    TS_DEBUT_HOSPI TIMESTAMP(0) WITHOUT TIME ZONE NOT NULL,
    TS_FIN_HOSPI TIMESTAMP(0) WITHOUT TIME ZONE,
    COUT_HOSPI NUMERIC(10, 2) NOT NULL,
    FOREIGN KEY (ID_CONSULT) REFERENCES CONSULTATION(ID_CONSULT),
    FOREIGN KEY (NO_CHAMBRE) REFERENCES CHAMBRE(NO_CHAMBRE),
    FOREIGN KEY (ID_PERSONNEL_RESP) REFERENCES PERSONNEL(ID_PERSONNEL)
);
